@@ -7,6 +7,7 @@ aTunes 3.0.4
 - FIX: Last play date loses hour and minute
 - FIX: Can't add columns to search results dialog
 - FIX: Search numbers in title field does not work
+- FIX: Seek in progress slider must be fired when releasing mouse button
 
 aTunes 3.0.3
 ------------
